--- a/MP_Lucas_Sanz/MP_Lucas_Sanz/MP_Lucas_Sanz.vbproj
+++ b/MP_Lucas_Sanz/MP_Lucas_Sanz/MP_Lucas_Sanz.vbproj
@@ -73,10 +73,21 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Manager\ManagerEmpresas.vb" />
+    <Compile Include="Manager\ManagerBanco.vb" />
+    <Compile Include="Manager\ManagerEmpresa.vb" />
+    <Compile Include="Manager\ManagerFormaPago.vb" />
+    <Compile Include="Model\Banco.vb" />
+    <Compile Include="Model\FormaPago.vb" />
     <Compile Include="View\ApplicationEvents.vb" />
     <Compile Include="Model\ConnectionDB.vb" />
     <Compile Include="Model\Empresa.vb" />
+    <Compile Include="View\Banco\ctrBanco.vb" />
+    <Compile Include="View\Banco\frmNuevoBanco.Designer.vb">
+      <DependentUpon>frmNuevoBanco.vb</DependentUpon>
+    </Compile>
+    <Compile Include="View\Banco\frmNuevoBanco.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="View\Empresa\frmNuevaEmpresa.Designer.vb">
       <DependentUpon>frmNuevaEmpresa.vb</DependentUpon>
     </Compile>
@@ -126,6 +137,9 @@
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="View\Banco\frmNuevoBanco.resx">
+      <DependentUpon>frmNuevoBanco.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\Empresa\frmNuevaEmpresa.resx">
       <DependentUpon>frmNuevaEmpresa.vb</DependentUpon>
     </EmbeddedResource>
@@ -151,6 +165,8 @@
     </None>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Resources\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
